<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="373dp"
        android:layout_height="282dp"
        android:layout_gravity="center_horizontal"
        android:background="#ff123456"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff234567"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:text="@string/resulttitletext"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelNumberOfLaps"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/resultlaps"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/paramNumberOfLaps"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelLapTime"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/resultlaptime"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/paramLapTime"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/paramLabelNumberOfWallsHit"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/resultwallhits"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/paramNumberOfWallsHit"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/paramLabelPercentageInPathMovementTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/resultpathtime"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/paramPercentageInPathMovementTime"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Button01"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickSetup"
                android:text="@string/resultbuttonsetuptext"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/Button03"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickExit"
                android:text="@string/resultexitbuttontext"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
